--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.0.0",
     "express-session": "~1.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "lodash": "^4.16.2",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
