--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.4.3",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
+    "css-loader": "^0.25.0",
     "ejs": "~0.8.5",
     "express": "~4.0.0",
     "express-session": "~1.0.0",
@@ -22,12 +23,16 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
+    "node-sass": "^3.10.0",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
     "passport-google-oauth": "~0.1.5",
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "path": "^0.12.7",
-    "webpack": "^1.13.2"
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-notifier": "^1.4.1"
   }
 }
