Style and layout updates - Adding postcss and autoprefixer to webpack build - Adding normalize and some base layout styles - Adding Montserrat Google web font - Style updates to header, Home and Login pages

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
+    "autoprefixer": "^6.5.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.4.3",
     "connect-flash": "~0.1.1",
@@ -30,6 +31,7 @@
     "passport-local": "~0.1.6",
     "passport-twitter": "~1.0.2",
     "path": "^0.12.7",
+    "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
