--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
+    "webpack-livereload-plugin": "^0.8.2",
     "webpack-notifier": "^1.4.1"
   }
 }
