--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-loader": "^0.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
+    "svg-url-loader": "^1.1.0",
     "webpack": "^1.13.2",
     "webpack-notifier": "^1.4.1"
   }
