Cleaning up edit in place styling - Removing delete button and replacing with options icon (need to add a fly-out menu with a delete option) - Styling text/input to line up correctly when editing in place, adding pencil icon

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules
 config/auth.js
 *.log
+
+# Ignore all icons, then add back in as needed
+public/icons/*.svg
+!public/icons/dots-horizontal-triple.svg
+!public/icons/edit-pencil.svg
