--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
+    "ng-dialog": "^0.6.4",
     "node-sass": "^3.10.0",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
