Adding babel/babel-loader to webpack build

--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
     "svg-url-loader": "^1.1.0",
     "webpack": "^1.13.2",
     "webpack-notifier": "^1.4.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0"
   }
 }
